# icloud-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
icloud_manager/: __init__.py  cli.py
icloud_manager/services/: __init__.py  auth.py  calendar.py  contacts.py  drive.py  findmy.py  notes.py  reminders.py
